messages display issue

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,4 +1,4 @@
-.footer {
+/* .footer {
   left: 0;
   bottom: 0;
   position: relative;
@@ -14,3 +14,4 @@
 .back {
   background-color: green;
 }
+ */
