--- a/src/components/Loader/Loader.css
+++ b/src/components/Loader/Loader.css
@@ -1,3 +1,14 @@
 .loader {
-  width: 50px;
+  height: 100%;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 10;
 }
