--- a/src/components/Product/CountryList.css
+++ b/src/components/Product/CountryList.css
@@ -1,7 +1,6 @@
-.flag {
-  width: 100px;
+/* .flag {
+  width: 150px;
 }
-/* .table-body {
+.table-body {
   background-color: aquamarine;
-}
- */
+} */
