--- a/src/components/Search/SearchForm.css
+++ b/src/components/Search/SearchForm.css
@@ -1,3 +1,10 @@
 .Search_Form {
-  padding: 30px;
+  padding: 20px;
+
+  color: inherit;
+}
+.inputbox {
+  background-color: aliceblue;
+  margin-right: 500px;
+  color: inherit;
 }
