--- a/src/components/Search/SearchForm.css
+++ b/src/components/Search/SearchForm.css
@@ -3,8 +3,9 @@
 
   color: inherit;
 }
-.inputbox {
+/* .inputbox {
   background-color: aliceblue;
   margin-right: 500px;
   color: inherit;
 }
+ */
